--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<% if current_user %>
+  Logged in as <%= current_user.name %>.
+  <%= link_to "Log out", log_out_path %>
+<% end %>
+
+<h1>WELCOME TO SLOTHBOOK!!!</h1>
+
 <%= yield %>
 
 </body>
