--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,25 +11,29 @@
   <% end %>
   
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :first_name, placeholder: "First Name", :size => 15 %> <%= f.text_field :last_name, placeholder: "Last Name", :size => 15 %> 
   </div>
+
   <br>
+
   <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, placeholder: "Your Email", :size => 34 %>
   </div>
+
   <br>
+
   <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, placeholder: "Password", :size => 34 %>
   </div>
+
   <br>
+
   <div class="field">
-    <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, placeholder: "Re-enter Password", :size => 34 %>
   </div>
+
   <br>
+
   <div class="actions">
     <%= f.submit("Sign Up")%>
   </div>
