--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,9 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<table>
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= link_to user.first_name, user %></td>
+      <td>[<%= link_to 'Edit', edit_user_path(user) %>]</td>
+      <td>[<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>]</td>
+    </tr>
+  <% end %>
+</table>
