--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,8 @@
 <body>
 
 <% if current_user %>
-  Logged in as <%= current_user.name %>.
-  <%= link_to "Log out", log_out_path %>
+  Logged in as <%= "#{current_user.first_name} #{current_user.last_name}" %>.
+  <%= link_to 'Log out', log_out_path %>
 <% end %>
 
 <h1>WELCOME TO SLOTHBOOK!!!</h1>
