--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,14 @@
 </head>
 <body>
 
+<!-- Put this stuff somewhere else. -->
+
 <% if current_user %>
-  Logged in as <%= "#{current_user.first_name} #{current_user.last_name}" %>.
-  <%= link_to 'Log out', log_out_path %>
+  <p>Logged in as <%= "#{current_user.first_name} #{current_user.last_name}" %>.</p>
+  <p><%= link_to 'Log out', log_out_path %></p>
+  <p><%= link_to 'Newsfeed', root_path %></p>
+  <p><%= link_to 'My Wall', user_path(current_user) %></p>
+  <p><%= link_to 'Edit my account', edit_user_path(current_user) %></p>
 <% end %>
 
 <h1>WELCOME TO SLOTHBOOK!!!</h1>
