--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,27 +8,17 @@
     </ul>
   <% end %>
   
-  <div class="field">
-    <%= f.text_field :first_name, placeholder: "First Name", :size => 15 %> <%= f.text_field :last_name, placeholder: "Last Name", :size => 15 %> 
-  </div>
+  <p><%= f.text_field :first_name, placeholder: "First Name", :size => 15 %> <%= f.text_field :last_name, placeholder: "Last Name", :size => 15 %></p>
 
-  <br>
+  <p><%= f.text_field :email, placeholder: "Your Email", :size => 34 %></p>
 
-  <div class="field">
-    <%= f.text_field :email, placeholder: "Your Email", :size => 34 %>
-  </div>
+  <p><%= f.password_field :password, placeholder: "Password", :size => 34 %></p>
 
-  <br>
+  <p><%= f.password_field :password_confirmation, placeholder: "Re-enter Password", :size => 34 %></p>
 
-  <div class="field">
-    <%= f.password_field :password, placeholder: "Password", :size => 34 %>
-  </div>
+<!-- Fix radio buttons -->
 
-  <br>
-
-  <div class="field">
-    <%= f.password_field :password_confirmation, placeholder: "Re-enter Password", :size => 34 %>
-  </div>
+  <p><%= f.radio_button :sex, "Female" %> <%= f.radio_button :sex, "Male" %></p>
 
   <br>
 
