--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,6 +4,9 @@
       <td><%= link_to "#{user.first_name} #{user.last_name}", user %></td>
       <td>[<%= link_to 'Edit', edit_user_path(user) %>]</td>
       <td>[<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>]</td>
+      <% if current_user %>
+        <td><%= button_to "Add Friend", friendships_path(:friend_id => user.id), method: :post %></td>
+      <% end %>
     </tr>
   <% end %>
 </table>
