--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,7 @@
 <h1><%= "#{@user.first_name} #{@user.last_name}" %></h1>
 <p><%= "#{@user.email}" %></p>
+
+<h2>Friends</h2>
+<% @user.friends.each do |friend| %>
+  <%= friend.first_name %> <%=friend.last_name%><br>
+<% end %>
