--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>SlothBook | Make Friends, Slowly</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
+  <head>
+    <title>SlothBook | Make Friends, Slowly</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+  </head>
+
 <body>
 
-<!-- Put this stuff somewhere else. -->
+  <div class='id_bar'>
+    <% if current_user %>
+      <%= link_to 'Home', newsfeed_path %> | <%= link_to "#{current_user.name}", user_path(current_user) %> | <%= link_to 'Edit', edit_user_path(current_user) %> | <%= link_to 'Log out', log_out_path %>
+    <% else %>
+      <%= link_to 'Log in', log_in_path %>
+    <% end %>
+  </div>
 
-<% if current_user %>
-  <p>Logged in as <%= "#{current_user.first_name} #{current_user.last_name}" %>.</p>
-  <p><%= link_to 'Log out', log_out_path %></p>
-  <p><%= link_to 'Newsfeed', root_path %></p>
-  <p><%= link_to 'My Wall', user_path(current_user) %></p>
-  <p><%= link_to 'Edit my account', edit_user_path(current_user) %></p>
-<% end %>
+  <div class='header'>
+    <h1>Welcome to Slothbook.</h1>
+  </div>
 
-<h1>WELCOME TO SLOTHBOOK!!!</h1>
-
-<% flash.each do |name, msg| %>
-  <%= msg %>
-<% end %>
-
-<%= yield %>
+  <div class='container'>
+    <% if flash.notice %>
+      <%= flash.notice %><br><br>
+    <% end%>
+    
+    <%= yield %>
+  </div>
 
 </body>
 </html>
