--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,6 @@
 </div>
 
 <div class='profile_wall'>
-  This is your wall, fool.
-
   <%= form_for(@post) do |f| %>
     <% if @post.errors.any? %>
       <%= pluralize(@post.errors.count, "error") %> prohibited this message from being posted:
@@ -42,9 +40,19 @@
       </ul>
     <% end %>
 
-    <p><%= f.text_area :content %></p>
+    <p>
+      <%= f.label :content, "Say something:"%><br>
+      <%= f.text_area :content %>
+    </p>
+
+    <%= f.hidden_field :recipient_id, :value => @user.id %> 
+    <%= f.hidden_field :author_id, :value => current_user.id %>
 
     <p><%= f.submit("Onward, to glory!")%></p>
-
   <% end %>
+
+  <% @user.posts.each do |post| %>
+        <%= time_ago_in_words(review.created_at) %> ago, by <strong><%= post.from %>:</strong> </br>
+        <%= post.content %>
+    <% end %>
 </div>
