--- a/app/views/users/newsfeed.html.erb
+++ b/app/views/users/newsfeed.html.erb
@@ -15,6 +15,27 @@
   <% end %>
 <% end %>
 
+<%= form_for(@post) do |f| %>
+  <% if @post.errors.any? %>
+    <%= pluralize(@post.errors.count, "error") %> prohibited this message from being posted:
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+        <li> <%= message %> </li>
+      <% end %> 
+    </ul>
+  <% end %>
+
+  <p>
+    <%= f.label :content, "What's on your mind?"%><br>
+    <%= f.text_area :content %>
+  </p>
+
+  <%= f.hidden_field :user_id, :value => current_user.id %> 
+  <%= f.hidden_field :author, :value => current_user.name %>
+
+  <p><%= f.submit("Onward, to glory!")%></p>
+<% end %>
+
 <% Post.all.reverse.each do |post| %>
   <% if ( current_user.find_all_friend_names.include?(post.author) || post.author == current_user.name ) && ( current_user.find_all_friend_names.include?(post.user.name) || post.user.name == current_user.name ) %>
     <p>
