--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,6 +59,40 @@ h1 {
 }
 
 .style_image {
-  border: 1px solid black;
+  border: 1px solid #596773;
   width: 150px;
+}
+
+/*Post*/
+.post_box {
+  background: white;
+  margin: 10px;
+  padding: 10px;
+  width: 400px;
+  border: 1px solid #c4cfd9;
+}
+
+.post_title {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.post_date {
+  font-style: italic;
+  font-size: 12px;
+  color: #696969;
+}
+
+.post_content {
+  font-size: 14px;
+}
+
+/*User Index*/
+.user_box {
+  background: white;
+  margin: 5px;
+  padding: 5px;
+  width: 200px;
+  height: 100px;
+  border: 1px solid #c4cfd9;
 }
