--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,23 +1,28 @@
-<table>
-  <% @users.each do |user| %>
-    <tr>
+<% @users.each do |user| %>
 
-      <% if user.name != current_user.name %>
+  <% if user != current_user %>
 
-        <td><%= link_to "#{user.name}", user %></td>
+    <div class='user_box'>
+      <table>
+        <tr>
+          <td><%= image_tag(user.photo_url, size: '50x50') %></td>
 
-        <% if user.not_already_friends?(current_user.id) && user.not_already_inverse_friends?(current_user.id) %>
-          <td><%= button_to "Add Friend", friendships_path(:friend_id => user.id), method: :post %></td>
-        <% else %>
-          <td>You are already friends!</td>
-        <% end %>
+          <td><%= link_to "#{user.name}", user %><br>
 
-        <% if current_user.name == 'David Foster Wallace' %>
-          <td>[<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>]</td>
-        <% end %>
+            <% if current_user.find_all_friend_names.include?(user.name) %>
+              Friends
+            <% elsif current_user.pending_friendships.include?(user) %>
+              Pending
+            <% else %>
+              <%= button_to "Add Friend", friendships_path(:friend_id => user.id), method: :post %>
+            <% end %>
 
-      <% end %>
-
-    </tr>
+            <% if current_user.name == 'David Foster Wallace' %>
+              [<%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>]
+            <% end %>
+          </td>
+        </tr>
+      </table>
+    </div>
   <% end %>
-</table>
+<% end %>
