--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,15 +46,17 @@ h1 {
   padding-left: 50px;
 }
 
-.profile_info {
+.left_box {
   float:left;
+  margin-right: 45px;
 }
 
 .profile_table td {
-  padding-right: 2em;
+  padding-right: 1em;
+  vertical-align:top;
 }
 
-.profile_wall {
+.right_box {
   float:left;
 }
 
@@ -70,6 +72,12 @@ h1 {
   padding: 10px;
   width: 400px;
   border: 1px solid #c4cfd9;
+}
+
+.post_box td {
+  margin: 10px;
+  padding-right: 10px;
+  vertical-align:top;
 }
 
 .post_title {
@@ -90,9 +98,13 @@ h1 {
 /*User Index*/
 .user_box {
   background: white;
-  margin: 5px;
-  padding: 5px;
-  width: 200px;
-  height: 100px;
+  margin: 10px;
+  padding: 10px;
+  width: 250px;
+  height: 58px;
   border: 1px solid #c4cfd9;
+}
+
+.user_box td {
+  padding-right: 5px;
 }
