--- a/app/views/users/newsfeed.html.erb
+++ b/app/views/users/newsfeed.html.erb
@@ -5,13 +5,13 @@
 
   <p><%= link_to 'Make new slothy friends!', users_path %></p>
 
-  <% if current_user.pending_friendships.count > 0 %>
-    <p>You have <%= pluralize(current_user.pending_friendships.count, 'new slothy friend request') %>!</p>
+  <% if current_user.pending_friendships_to_respond_to.count > 0 %>
+    <p>You have <%= pluralize(current_user.pending_friendships_to_respond_to.count, 'new slothy friend request') %>!</p>
 
     <% current_user.inverse_friendships.each do |inverse_friendship| %>
       <% if inverse_friendship.status == 'pending' %>
         <%= link_to "#{inverse_friendship.user.name}", user_path(inverse_friendship.user.id) %>
-        <%= button_to "Confirm Friend Request", friendship_path(inverse_friendship.id), method: :patch %><br>
+        <%= button_to "Accept Friend Request", friendship_path(inverse_friendship.id), method: :patch %><br>
       <% end %>
     <% end %>
   <% end %>
